@@ -7,6 +7,8 @@ import org.kios.service.sdk.data.UserData;
 import org.kios.service.sdk.data.payment.PaymentTaskItem;
 import org.kios.service.sdk.data.purchase.PurchaseDetail;
 import org.kios.service.sdk.data.purchase.ResponseSavePurchase;
+import org.kios.service.sdk.data.settlement.ShopRefundableData;
+import org.kios.service.sdk.data.settlement.ChainInfo;
 import org.kios.service.sdk.utils.Amount;
 import org.kios.service.sdk.utils.CommonUtils;
 import org.junit.jupiter.api.Assertions;
@@ -15,6 +17,8 @@ import org.junit.jupiter.api.Test;
 import java.math.BigInteger;
 import java.util.ArrayList;
 import java.util.Hashtable;
+
+import org.kios.service.sdk.data.payment.*;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -71,7 +75,7 @@ class SettlementClientTest {
         users.add(new UserData("+82 10-1000-2004", "0xb93f43bdafc9efee5b223735a0dd4efef9522f2db5b9f70889d6fa6fcead50c4"));
 
         purchaseShopId = shops.get(5).shopId;
-        userAccount = users.getFirst().address;
+        userAccount = users.get(0).address;
 
         SavePurchase();
         Payment();
@@ -126,7 +130,7 @@ class SettlementClientTest {
         try {
             // Create User Client
             System.out.println("[ Create User Client ]");
-            PaymentClientForUser userClient = new PaymentClientForUser(network, users.getFirst().privateKey);
+            PaymentClientForUser userClient = new PaymentClientForUser(network, users.get(0).privateKey);
 
             // Create Client
             System.out.println("[ Create Client ]");
@@ -162,7 +166,7 @@ class SettlementClientTest {
 
                 // Approval New Payment
                 System.out.println("[ Approval New Payment ]");
-                var res = userClient.approveNewPayment(
+                PaymentTaskItemShort res = userClient.approveNewPayment(
                         paymentItem.paymentId,
                         paymentItem.purchaseId,
                         paymentItem.amount,
@@ -178,7 +182,7 @@ class SettlementClientTest {
 
                 // Close New Payment
                 System.out.println("[ Close New Payment ]");
-                var res2 = client.closeNewPayment(paymentItem.paymentId, true);
+                PaymentTaskItem res2 = client.closeNewPayment(paymentItem.paymentId, true);
                 assertEquals(res2.paymentId, paymentItem.paymentId);
 
                 // Waiting...
@@ -224,7 +228,7 @@ class SettlementClientTest {
         try {
             for (ShopData shop : shops)
             {
-                var shopClient = new SettlementClientForShop(network, shop.privateKey, shop.shopId);
+                SettlementClientForShop shopClient = new SettlementClientForShop(network, shop.privateKey, shop.shopId);
                 shopClient.removeSettlementManager();
             }
         } catch (Exception e) {
@@ -237,7 +241,7 @@ class SettlementClientTest {
         try {
             for (ShopData shop : activeShops)
             {
-                var shopClient = new SettlementClientForShop(network, shop.privateKey, shop.shopId);
+                SettlementClientForShop shopClient = new SettlementClientForShop(network, shop.privateKey, shop.shopId);
                 shopClient.setSettlementManager(settlementClientForManager.getShopId());
             }
         } catch (Exception e) {
@@ -248,7 +252,7 @@ class SettlementClientTest {
     void Settlement04_Check() {
         System.out.println("[ Settlement04_Check ]");
         try {
-            var length = settlementClient.getSettlementClientLength();
+            long length = settlementClient.getSettlementClientLength();
             Assertions.assertEquals(length, 6);
         } catch (Exception e) {
             assertEquals("some exception message...", e.getMessage());
@@ -258,8 +262,8 @@ class SettlementClientTest {
     void Settlement05_CollectSettlementAmount() {
         System.out.println("[ Settlement05_CollectSettlementAmount ]");
         try {
-            var clientLength = settlementClient.getSettlementClientLength();
-            var clientList = settlementClient.getSettlementClientList(0, clientLength);
+            long clientLength = settlementClient.getSettlementClientLength();
+            ArrayList<String> clientList = settlementClient.getSettlementClientList(0, clientLength);
             settlementClient.collectSettlementAmountMultiClient(clientList);
         } catch (Exception e) {
             assertEquals("some exception message...", e.getMessage());
@@ -280,8 +284,8 @@ class SettlementClientTest {
         try {
             for (ShopData shop : activeShops)
             {
-                var shopClient = new SettlementClientForShop(network, shop.privateKey, shop.shopId);
-                var res = shopClient.getRefundable();
+                SettlementClientForShop shopClient = new SettlementClientForShop(network, shop.privateKey, shop.shopId);
+                ShopRefundableData res = shopClient.getRefundable();
                 Assertions.assertEquals(res.refundableAmount, BigInteger.ZERO);
             }
         } catch (Exception e) {
@@ -292,16 +296,16 @@ class SettlementClientTest {
     void Settlement08_RefundOfManager() {
         System.out.println("[ Settlement08_RefundOfManager ]");
         try {
-            var refundableData =  settlementClient.getRefundable();
-            var refundableAmount = refundableData.refundableAmount;
-            var refundableToken = refundableData.refundableToken;
+            ShopRefundableData refundableData =  settlementClient.getRefundable();
+            BigInteger refundableAmount = refundableData.refundableAmount;
+            BigInteger refundableToken = refundableData.refundableToken;
 
-            var accountOfShop = settlementClient.getAccountOfShopOwner();
-            var res1 = settlementClient.getBalanceAccount(accountOfShop);
+            String accountOfShop = settlementClient.getAccountOfShopOwner();
+            UserBalance res1 = settlementClient.getBalanceAccount(accountOfShop);
 
             settlementClient.refund(refundableAmount);
 
-            var res2 = settlementClient.getBalanceAccount(accountOfShop);
+            UserBalance res2 = settlementClient.getBalanceAccount(accountOfShop);
 
             Assertions.assertEquals(res2.token.balance, res1.token.balance.add(refundableToken));
         } catch (Exception e) {
@@ -321,11 +325,11 @@ class SettlementClientTest {
     void Settlement10_Withdrawal() {
         System.out.println("[ Settlement10_Withdrawal ]");
         try {
-            var chainInfo = settlementClient.getChainInfoOfSideChain();
-            var accountOfShop = settlementClient.getAccountOfShopOwner();
-            var res2 = settlementClient.getBalanceAccount(accountOfShop);
-            var balanceOfToken = res2.token.balance;
-            var balanceMainChain1 = settlementClient.getBalanceOfMainChainToken(accountOfShop);
+            ChainInfo chainInfo = settlementClient.getChainInfoOfSideChain();
+            String accountOfShop = settlementClient.getAccountOfShopOwner();
+            UserBalance res2 = settlementClient.getBalanceAccount(accountOfShop);
+            BigInteger balanceOfToken = res2.token.balance;
+            BigInteger balanceMainChain1 = settlementClient.getBalanceOfMainChainToken(accountOfShop);
             settlementClient.withdraw(balanceOfToken);
 
             long t1 = CommonUtils.getTimeStamp();
